[metadata]
name = gompers
description = A simple distributed worker queue
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
* = _version.txt
